# intelligent-ticket-router

./: .gitignore  README.md  pyproject.toml  run_results.json  test_queries.json
data/finance_docs/: finance_budget_policy.txt  finance_expense_policy.txt  finance_invoice_process.txt  finance_payroll_faq.txt  finance_policy_1.txt  finance_procurement_rules.txt  finance_short.txt
data/hr_docs/: hr_benefits_faq.txt  hr_onboarding_steps.txt  hr_performance_review_guide.txt  hr_policy_1.txt  hr_policy_overview.txt  hr_short.txt  hr_timeoff_policy.txt
data/tech_docs/: tech_desktop_setup.txt  tech_guide_1.txt  tech_it_ticket_faq.txt  tech_oncall_runbook.txt  tech_security_policy.txt  tech_short.txt  tech_vpn_guide.txt
src/: evaluator.py  ingest.py  orchestrator.py  run_system.py
src/agents/: base_agent.py  finance_agent.py  hr_agent.py  tech_agent.py
